--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
+    "react-chat-engine": "^1.11.22",
     "react-chat-engine-advanced": "^0.1.9",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
